[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-parallel-tools"
version = "0.1.0"
description = "Run multiple agent tool calls concurrently, results in order"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-parallel-tools"
Repository = "https://github.com/MukundaKatta/agent-parallel-tools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_parallel_tools = ["py.typed"]
